--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,10 +5,11 @@
 
   }
   .microposts .user {
-    
+    color: #777;
+    font-size: 14px;
   }
-  .microposts .user {
-    
+  .microposts .content {
+    font-size: 18px;
   }
 
 </style>
