--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
 </style>
 <script>
 $(function() {
-  var milkcocoa = new MilkCocoa("uniiaxclo10.mlkcca.com");
+  var milkcocoa = new MilkCocoa("{your app id}.mlkcca.com");
   milkcocoa.user(function(err, user) {
     if(user) {
       start(user);
